# SmartFibers-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: demo.py
app/api/v1/: endpoints.py
app/train-YOLO8m_300_1280_flipud_1/: args.yaml  results.csv
app/utils/: FiberDetect.py  ResultGenerator.py
